Yak shaving of kees test client

--- a/kees-server/web/static/test/index.html
+++ b/kees-server/web/static/test/index.html
@@ -38,14 +38,14 @@
             <i class="hide"></i>
           </div>
 
-          <div class="row wsStart hide">
+          <div class="row startWS hide">
             <button hook="startWS">start ws</button>
             <i class="hide"></i>
           </div>
 
           <hr>
 
-          <div class="row wsAction hide">
+          <div class="row wsActions hide">
             <button hook="goodAuth">send good auth</button>
             <button hook="badAuth">send bad auth</button>
           </div>
