--- a/kees-server/web/static/simulator/index.html
+++ b/kees-server/web/static/simulator/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>kees websocket test client</title>
+    <title>kees websocket client simulator</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💿</text></svg>">
@@ -11,7 +11,7 @@
 
   <body>
     <div class="container">
-      <h1>kees websocket test client</h1>
+      <h1>kees websocket client simulator</h1>
 
       <div class="row main">
         <div class="device six columns">
@@ -62,5 +62,5 @@
     </div>
   </body>
 
-  <script src="/static/js/kees.js"></script>
+  <script src="/static/js/simulator.js"></script>
 </html>
