--- a/kees-server/web/static/client/index.html
+++ b/kees-server/web/static/client/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💿</text></svg>">
 
-    <link rel="stylesheet" href="/static/css/kees.css" />
+    <link rel="stylesheet" href="/s/css/kees.css" />
   </head>
 
   <body>
@@ -59,5 +59,5 @@
     </div>
   </body>
 
-  <script src="/static/js/client.js"></script>
+  <script src="/s/js/client.js"></script>
 </html>
